--- a/BackEnd/BackEndNoteCreation/src/main/resources/application.properties
+++ b/BackEnd/BackEndNoteCreation/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8090
-spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:48786/railway
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:51402/railway
 spring.datasource.username=root
-spring.datasource.password=-54Ee3-5a65aHcB4Hc5ah3g6ghBBbFHG
+spring.datasource.password=CgF5cAHCFgCgd4H6f2fBhcaBEE3ga-5H
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
