--- a/BackEnd/BackEndNoteCreation/src/main/resources/application.properties
+++ b/BackEnd/BackEndNoteCreation/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8090
-spring.datasource.url=jdbc:mysql://bfmuramqvq7eg6btgm5w-mysql.services.clever-cloud.com:3306/bfmuramqvq7eg6btgm5w?useSSL=false
-spring.datasource.username=u7wx7i7nsutic1z2
-spring.datasource.password=JL5Qx7UI0Xcisqoycn06
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:51402/railway
+spring.datasource.username=root
+spring.datasource.password=CgF5cAHCFgCgd4H6f2fBhcaBEE3ga-5H
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
