--- a/BackEnd/BackEndNoteCreation/src/main/resources/application.properties
+++ b/BackEnd/BackEndNoteCreation/src/main/resources/application.properties
@@ -1,9 +1,17 @@
-server.port=8090
-spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:48786/railway
-spring.datasource.username=root
-spring.datasource.password=-54Ee3-5a65aHcB4Hc5ah3g6ghBBbFHG
+server.port=5000
+spring.datasource.url=jdbc:mysql://db-aws.cjuigq2s8kj5.us-east-2.rds.amazonaws.com:3306/db_notes
+spring.datasource.username=admin
+spring.datasource.password=adminroot
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
-
+#
+#server.port=8090
+#spring.datasource.url=jdbc:mysql://localhost/db_notes_backend?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#logging.level.org.hibernate.SQL=debug
